@@ -3,19 +3,19 @@ package me.noramibu.itemeditor.ui.component;
 import io.wispforest.owo.ui.component.ButtonComponent;
 import io.wispforest.owo.ui.container.FlowLayout;
 import io.wispforest.owo.ui.core.Sizing;
+import java.util.List;
+import java.util.Objects;
+import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.stream.Stream;
 import me.noramibu.itemeditor.ui.panel.specialdata.SpecialDataPanelContext;
 import me.noramibu.itemeditor.util.ItemEditorText;
 import net.minecraft.network.chat.Component;
 
-import java.util.List;
-import java.util.function.Consumer;
-import java.util.function.Function;
-
 public final class PickerFieldFactory {
     private static final int MIN_TEXT_INPUT_WIDTH = 160;
 
-    private PickerFieldFactory() {
-    }
+    private PickerFieldFactory() {}
 
     public static <T> FlowLayout dropdownField(
             SpecialDataPanelContext context,
@@ -25,16 +25,14 @@ public final class PickerFieldFactory {
             int buttonWidth,
             List<T> values,
             Function<T, String> labelMapper,
-            Consumer<T> onSelected
-    ) {
+            Consumer<T> onSelected) {
         int effectiveButtonWidth = boundedButtonWidth(context, buttonWidth);
         return UiFactory.pickerField(
                 label,
                 helpText,
                 buttonText,
                 effectiveButtonWidth,
-                button -> context.openDropdown(button, values, labelMapper, onSelected)
-        );
+                button -> context.openDropdown(button, values, labelMapper, onSelected));
     }
 
     public static FlowLayout searchableField(
@@ -47,16 +45,14 @@ public final class PickerFieldFactory {
             String pickerBody,
             List<String> values,
             Function<String, String> labelMapper,
-            Consumer<String> onSelected
-    ) {
+            Consumer<String> onSelected) {
         int effectiveButtonWidth = boundedButtonWidth(context, buttonWidth);
         return UiFactory.pickerField(
                 label,
                 helpText,
                 buttonText,
                 effectiveButtonWidth,
-                button -> context.openSearchablePicker(pickerTitle, pickerBody, values, labelMapper, onSelected)
-        );
+                button -> context.openSearchablePicker(pickerTitle, pickerBody, values, labelMapper, onSelected));
     }
 
     public static FlowLayout searchableTextField(
@@ -69,20 +65,37 @@ public final class PickerFieldFactory {
             String pickerBody,
             List<String> values,
             Function<String, String> labelMapper,
-            Consumer<String> onSelected
-    ) {
-        int effectiveButtonWidth = Math.min(Math.max(1, pickButtonWidth), context.panelWidthHint());
+            Consumer<String> onSelected,
+            ButtonComponent... extraActions) {
+        int availableWidth =
+                Math.max(1, context.panelWidthHint() - UiFactory.scaleProfile().padding() * 4);
+        int effectiveButtonWidth = Math.clamp(pickButtonWidth, 1, availableWidth);
         int rowGap = Math.max(1, UiFactory.scaleProfile().tightSpacing());
-        boolean stacked = context.panelWidthHint() < MIN_TEXT_INPUT_WIDTH + effectiveButtonWidth + rowGap;
-        FlowLayout row = stacked ? UiFactory.column() : UiFactory.row();
-        row.child(UiFactory.textBox(value, context.bindText(setter))
-                .horizontalSizing(stacked ? Sizing.fill(100) : Sizing.expand(100)));
         ButtonComponent pick = UiFactory.pickerButton(
                 ItemEditorText.tr("common.pick"),
                 pickButtonWidth,
-                button -> context.openSearchablePicker(pickerTitle, pickerBody, values, labelMapper, onSelected)
-        );
-        row.child(pick.horizontalSizing(stacked ? Sizing.fill(100) : UiFactory.fixed(effectiveButtonWidth)));
+                button -> context.openSearchablePicker(pickerTitle, pickerBody, values, labelMapper, onSelected));
+        pick.horizontalSizing(Sizing.fixed(effectiveButtonWidth));
+        List<ButtonComponent> actions = Stream.concat(Stream.of(pick), Stream.of(extraActions))
+                .filter(Objects::nonNull)
+                .toList();
+        int actionWidth = actions.stream()
+                .mapToInt(action -> action.horizontalSizing().get().value)
+                .max()
+                .orElse(effectiveButtonWidth);
+        actions.forEach(action -> action.horizontalSizing(Sizing.fixed(actionWidth)));
+        int actionsWidth = actionWidth * actions.size() + rowGap * (actions.size() - 1);
+        boolean stacked = availableWidth < MIN_TEXT_INPUT_WIDTH + actionsWidth + rowGap;
+        FlowLayout row = stacked ? UiFactory.column() : UiFactory.row();
+        row.child(UiFactory.textBox(value, context.bindText(setter))
+                .horizontalSizing(stacked ? Sizing.fill(100) : Sizing.expand(100)));
+        if (stacked) {
+            actions.forEach(action -> action.horizontalSizing(Sizing.fill(100 / actions.size())));
+            row.child(UiFactory.actionButtonRow(false, actions.toArray(ButtonComponent[]::new))
+                    .horizontalSizing(Sizing.fill(100)));
+        } else {
+            actions.forEach(row::child);
+        }
         return UiFactory.field(label, Component.empty(), row);
     }
 
